<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id">1618281258486160</string>
    <string name="app_name">Wanwan</string>
    <string name="tab_name1">HOT</string>
    <string name="tab_name2">DISCOVER</string>
    <string name="tab_name3">Me</string>
    <string name="title_question_detail">Question Details</string>
    <string name="title_ask_question">Ask Question</string>
    <string name="title_my_ask">I ask</string>
    <string name="title_my_answer">I answer</string>
    <string name="title_my_listen">I hear</string>
    <string name="title_login">Login</string>
    <string name="title_answer_question">Answer</string>
    <string name="title_edit_profile">Edit</string>
    <string name="title_withdraw">Withdraw</string>
    <string name="title_about">About</string>
    <string name="btn_send">Send</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_rerecord">Again</string>
    <string name="btn_refuse">Refuse</string>
    <string name="btn_sure">Yes</string>
    <string name="btn_ask_question">Ask</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_more">More</string>
    <string name="logout">Log out</string>
    <string name="btn_login">Log in</string>
    <string name="menu_title_share">share</string>
    <string name="menu_title_save">save</string>
    <string name="recording_start">Click to start recording, 60s limited</string>
    <string name="recording_stop">Recording, click to stop recording</string>
    <string name="recording_play">Finish recording, click to play</string>
    <string name="recording_playing">Playing...</string>
    <string name="format_second">%1$d\'\'</string>
    <string name="listen_for_free">Listen for Free</string>
    <string name="format_listerers">%1$d heard</string>
    <string name="format_price">Overhear with %1$s</string>
    <string name="format_answered">Answered %1$d</string>
    <string name="format_heard">Heard %1$d</string>
    <string name="format_asked">Asked %1$d</string>
    <string name="format_write_question">%1$d/100</string>
    <string name="format_write_describe">%1$d/200</string>
    <string name="format_write_title">%1$d/36</string>
    <string name="format_write_name">%1$d/15</string>
    <string name="login_failed">Login failed</string>
    <string name="login_cancel">Login canceled</string>
    <string name="btn_login_with_facebook">Login with Facebook</string>
    <string name="btn_login_with_qq">Login with QQ</string>
    <string name="user_payment_for_asking">Ask me a question with</string>
    <string name="user_earned">Total income</string>
    <string name="user_payment_rules">50% from income belongs to you</string>
    <string name="user_title">Your title</string>
    <string name="user_name">Your nickname</string>
    <string name="user_introduce">Tell something about yourself</string>
    <string name="user_withdraw_account">PayPal Cashout</string>
    <string name="remember">Remember</string>
    <string name="status_unanswered">Unanswered</string>
    <string name="status_answered">Answered</string>
    <string name="status_refunded">Refunded</string>
    <string name="status_timeout">Expired</string>
    <string name="notice_no_question">You haven\'t ask a question</string>
    <string name="notice_no_answer">Discover the hot questions</string>
    <string name="notice_no_listen">You haven\'t overheard yet</string>
    <string name="notice_back_to_exit">Press again to quit</string>
    <string name="sure_to_log_out">Sure to log out?</string>
    <string name="rerecording_title">Re-record will delete this record</string>
    <string name="rerecording_message">Sure to delete and rerecord?</string>
    <string name="google_pay_is_unavailable">Google Play initialization failed, can not currently pay, make sure your region supports Google Play paid or restart the application and try again!</string>
    <string name="hint_input_account">PayPal account(email)</string>
    <string name="hint_input_account_again">Enter again</string>
    <string name="hint_ask_question">We will return the question if there is no answer for more than 48 hours.</string>
    <string name="hint_user_name">Think an attractive nickname</string>
    <string name="hint_user_title">Operations Manager; radio DJ; Google early employees; globe-trotting slash youth</string>
    <string name="hint_user_introduce">Of these,ask me heartily; finance and investment, marry white Formica; and how to manage themselves heterosexual travel impulse ...... or give you a good night to sing songs</string>
    <string name="check_ask_question">Public Q&amp;A, your answer can be listened by others</string>
    <string name="login_privacy">I have read and agree to the user agreement.</string>
    <string name="launcher_slogan">Vocal Q&amp;A worth to pay</string>
    <string name="failed_to_load_data">Failed to load data, please try again later.</string>
    <string name="toast_withdraw_submited">We\'ve received your request, and it will be processed within 3 working days</string>
    <string name="about_payment_rules">Rule of income</string>
    <string name="about_ask_title">Answer questions: the respondent will get the total reward</string>
    <string name="about_share_title">Share eavesdropping：The income from sharing will be bisected by respondent and questioner</string>
    <string name="about_free_title">Limited time of free listen: Because there\'s no income from free eavesdropping, no part will be benefited</string>
    <string name="about_platform_rules">The platform will charge 50% as its income, After the withdraw operation,your platform will transfer it to your account in 3 days</string>
    <string name="detail_click_to_play">click to play</string>
    <string name="detail_downloading">downloading</string>
    <string name="notice_cannot_null">cannot be empty</string>
    <string name="notice_donot_match">didn\'t match</string>
    <string name="notice_success">Successfully Done!</string>
    <string name="format_earned">Total income $%1$.2f</string>
    <string name="format_current_income">Current income $%1$.2f</string>
    <string name="notice_ask_yourself">Asking yourself is forbidden</string>
    <string name="notice_permission_denied">Permission Denied</string>
    <string name="btn_listen_question">Listen</string>
    <string name="share_content">A hot voice Q&amp;A app</string>
    <string name="format_dollar">$%1$.2f</string>
    <string name="notice_question_expired">The question is expired</string>
    <string name="overhear_price">Overhear</string>
    <string name="notice_cannot_record">Unable to properly record</string>
    <string name="menu_title_search">search</string>
    <string name="hint_search">Search</string>
    <string name="search_title_persons">PERSONS</string>
    <string name="search_title_questions">QUESTIONS</string>
    <string name="notice_no_search_result">No results</string>
    <string name="format_respondent">Answered by %1$s</string>
    <string name="toast_no_more">No more!</string>
    <string name="notice_empty">Empty~</string>
    <string name="login_account_disable">Your account is disabled.</string>

    <plurals name="dealed_time_second">
        <item quantity="one">%1$d second ago</item>
        <item quantity="other">%1$d seconds ago</item>
    </plurals>
    <plurals name="dealed_time_minute">
        <item quantity="one">%1$d minute ago</item>
        <item quantity="other">%1$d minutes ago</item>
    </plurals>
    <plurals name="dealed_time_hour">
        <item quantity="one">%1$d hour ago</item>
        <item quantity="other">%1$d hours ago</item>
    </plurals>
    <plurals name="dealed_time_day">
        <item quantity="one">%1$d day ago</item>
        <item quantity="other">%1$d days ago</item>
    </plurals>
    <plurals name="dealed_time_month">
        <item quantity="one">%1$d month ago</item>
        <item quantity="other">%1$d months ago</item>
    </plurals>
    <plurals name="dealed_time_year">
        <item quantity="one">%1$d year ago</item>
        <item quantity="other">%1$d years ago</item>
    </plurals>
</resources>
